; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_dcache.c_dentry_free.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_dcache.c_dentry_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dentry = type { i32, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32 }
%struct.external_name = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@DCACHE_NORCU = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dentry*)* @dentry_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dentry_free(%struct.dentry* %0) #0 {
  %2 = alloca %struct.dentry*, align 8
  %3 = alloca %struct.external_name*, align 8
  store %struct.dentry* %0, %struct.dentry** %2, align 8
  %4 = load %struct.dentry*, %struct.dentry** %2, align 8
  %5 = getelementptr inbounds %struct.dentry, %struct.dentry* %4, i32 0, i32 1
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %7 = call i32 @hlist_unhashed(i32* %6)
  %8 = icmp ne i32 %7, 0
  %9 = xor i1 %8, true
  %10 = zext i1 %9 to i32
  %11 = call i32 @WARN_ON(i32 %10)
  %12 = load %struct.dentry*, %struct.dentry** %2, align 8
  %13 = call i32 @dname_external(%struct.dentry* %12)
  %14 = call i64 @unlikely(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %31

16:                                               ; preds = %1
  %17 = load %struct.dentry*, %struct.dentry** %2, align 8
  %18 = call %struct.external_name* @external_name(%struct.dentry* %17)
  store %struct.external_name* %18, %struct.external_name** %3, align 8
  %19 = load %struct.external_name*, %struct.external_name** %3, align 8
  %20 = getelementptr inbounds %struct.external_name, %struct.external_name* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = call i32 @atomic_dec_and_test(i32* %21)
  %23 = call i64 @likely(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %16
  %26 = load %struct.dentry*, %struct.dentry** %2, align 8
  %27 = getelementptr inbounds %struct.dentry, %struct.dentry* %26, i32 0, i32 1
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = call i32 @call_rcu(i32* %28, i32 (i32*)* @__d_free_external)
  br label %48

30:                                               ; preds = %16
  br label %31

31:                                               ; preds = %30, %1
  %32 = load %struct.dentry*, %struct.dentry** %2, align 8
  %33 = getelementptr inbounds %struct.dentry, %struct.dentry* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load i32, i32* @DCACHE_NORCU, align 4
  %36 = and i32 %34, %35
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %43

38:                                               ; preds = %31
  %39 = load %struct.dentry*, %struct.dentry** %2, align 8
  %40 = getelementptr inbounds %struct.dentry, %struct.dentry* %39, i32 0, i32 1
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 0
  %42 = call i32 @__d_free(i32* %41)
  br label %48

43:                                               ; preds = %31
  %44 = load %struct.dentry*, %struct.dentry** %2, align 8
  %45 = getelementptr inbounds %struct.dentry, %struct.dentry* %44, i32 0, i32 1
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 0
  %47 = call i32 @call_rcu(i32* %46, i32 (i32*)* @__d_free)
  br label %48

48:                                               ; preds = %25, %43, %38
  ret void
}

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @hlist_unhashed(i32*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @dname_external(%struct.dentry*) #1

declare dso_local %struct.external_name* @external_name(%struct.dentry*) #1

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @atomic_dec_and_test(i32*) #1

declare dso_local i32 @call_rcu(i32*, i32 (i32*)*) #1

declare dso_local i32 @__d_free_external(i32*) #1

declare dso_local i32 @__d_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
